# cpp-cliruntime

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/client/: client.cpp  client.hpp
src/common/: config.cpp  config.hpp  logger.cpp  logger.hpp  socket_wrapper.hpp
src/server/: command_handler.cpp  command_handler.hpp  server.cpp  server.hpp
tests/: test_client.cpp  test_server.cpp
